# thesis_test_task

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
app/: conftest.py  pytest.ini
app/company/: admin.py  models.py  serializers.py  urls.py  views.py
app/company/migrations/: 0001_initial.py  0002_alter_employee_department.py  0003_rename_posistion_employee_position.py  0004_alter_department_director.py  0005_alter_department_director.py
app/company/tests/: factories.py  test_views.py
app/core/: asgi.py  settings.py  urls.py  wsgi.py
app/swagger/: urls.py
